--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Jekyll Practice Website"
 email: roblaws@me.com
 description: "A learning space for the Jekyll static site generator"
 baseurl: ""
-url: "http://localhost:4000"
+url: "http://robert-laws.com/jekyll-pluralsight"
 twitter_username: roblaws1975
 github_username: robert-laws
 
